project: update the github actions plugin